# midi_const

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml
.reuse/: dep5
src/midi/: __init__.py  _utils.py
src/midi_const/: __init__.py
