# SPDX-FileCopyrightText: 2023 Raphaël Doursenaud <rdoursenaud@gmail.com>
#
# SPDX-License-Identifier: CC0-1.0 OR MIT OR Unlicense

[build-system]
requires = ["flit_core ~=3.2"]
build-backend = "flit_core.buildapi"

[project]
name = "midi_const"
authors = [{name = "Raphaël Doursenaud", email = "rdoursenaud@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/ematech/midi-const"

[tool.flit.module]
name = "midi"
